# pva

./: .gitignore  ABook.data  Dockerfile  LICENSE.txt  NoteBook.data  Pipfile  README.md  address_book.py  class_note.py  classes_address_book.py  handlers.py  note_book.py  pyproject.toml  serialization.py  setup.py  sort_files.py  start.py  validator.py
pva/: __init__.py  address_book.py  handlers.py  note_book.py  note_page.py  records.py  serialization.py  sort_files.py  start.py  validator.py
